app/overlay/client-sample/production/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client-sample-app
  name: client-sample
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 # how many pods we can add at a time
      maxUnavailable: 0
  template:
    spec:
      serviceAccountName: client-sample-app
      volumes:
        - name: client-secret
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "client-sample-app-secret"
      containers:
        - name: client-sample
          image: 123456789385.dkr.ecr.ap-southeast-1.amazonaws.com/client-staging-sample-app:v1.0.0
          volumeMounts:
            - name: client-secret
              mountPath: "/mnt/secrets"
              readOnly: true
          # resources:
          #   requests:
          #     memory: 128Mi
          #     cpu: 100m
          #   limits:
          #     memory: 768Mi
          #     cpu: 800m
          # envFrom:
          #   - secretRef:
          #       name: sample-shopping-secret
          # readinessProbe:
          #   httpGet:
          #     path: /ht
          #     port: web
          #   initialDelaySeconds: 30
          #   failureThreshold: 2
          #   periodSeconds: 10
